--- a/css/style.css
+++ b/css/style.css
@@ -304,7 +304,7 @@ header {
 /* Hero Section */
 .hero {
     position: relative;
-    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('../images/general/hero-bg.jpg');
+    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('../images/homepage.jpg');
     background-size: cover;
     background-position: center;
     height: 600px;
