--- a/css/orthondontics.css
+++ b/css/orthondontics.css
@@ -16,8 +16,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('../images/services/ortho-hero-bg.jpg') center/cover no-repeat;
-    opacity: 0.1;
+    background: url('../images/orthodontics.jpg') center/cover no-repeat;
+    opacity: 0.3;
     z-index: 1;
 }
 
